--- a/CSS/09/css/style.css
+++ b/CSS/09/css/style.css
@@ -1,10 +1,26 @@
 .container {
     display: grid;
-    grid-template-rows: repeat(2, 100px);
+    width: 600px;
+    grid-template-rows: repeat(4, 100px);
     grid-template-columns: repeat(3, 1fr);
     border: 4px solid lightgray;
 }
 
 .item {
-    border: 2px dashed red;
+    border: 10px solid red;
+    font-size: 30px;
+}
+
+.item:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+
+.item:nth-child(2) {
+    grid-row: 1 / 3;
+}
+
+.item:nth-child(4){
+    grid-row: 4 / 5;
+    grid-column: -1 / -3;
 }
