--- a/SCSS/01/main.scss
+++ b/SCSS/01/main.scss
@@ -1,22 +1,14 @@
-.btn {
-    width: 100px;
-    height: 100px;
-
-    &.active {
-        color: red;
-    }
+@mixin bg($width, $height, $bg-values...) {
+    width: $width;
+    height: $height;
+    background: $bg-values;
 }
 
-.fs {
-    &-small {
-        font-size: 14px;
-    }
-
-    &-medium {
-        font-size: 16px;
-    }
-
-    &-large {
-        font-size: 18px;
-    }
+div {
+    @include bg(100px,
+        200px,
+        url("/images/a.png") no-repeat 10px 20px,
+        url("/images/b.png") no-repeat,
+        url("/images/c.png"));
 }
+
