--- a/SCSS/02/main3.css
+++ b/SCSS/02/main3.css
@@ -1,11 +1,11 @@
 .through:nth-child(1) {
-    widht: 20px;
+    width: 20px;
   }
   
   .through:nth-child(2) {
-    widht: 40px;
+    width: 40px;
   }
   
   .through:nth-child(3) {
-    widht: 60px;
+    width: 60px;
   }
